k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalable-chat-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: admin.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-app
                port:
                  number: 3000
    - host: user.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 3001
